k8s/clientDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
       component: web
    spec:
      containers:
        - name: client
         # image: <aws_account_id>.dkr.ecr.<aws_region>.amazonaws.com/<repository_name>
