k8s/serverDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          # image: <aws_account_id>.dkr.ecr.<aws_region>.amazonaws.com/<repository_name> 
          ports: 
            - containerPort: 5000
