k8s/serverClusterService.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8080
      targetPort: 8080
