k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Optional: Redirect HTTP to HTTPS
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port: 
                 number: 3000
